# load-balancer

./: .gitignore  docker-compose.yml  prometheus.yml
dbpoller/: Cargo.toml  Dockerfile
dbpoller/src/: main.rs
dbpoller/src/database/: get_data.rs
dbpoller/src/in_memory_server_urls/: add_server.rs  remove_server.rs
load_balancer/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  go.mod  go.sum  load-balancer  main.go  prometheus.yml
load_balancer/algorithms/: config.go  leastConnections.go  roundrobin.go  serverstruct.go  weightedRoundRobin.go
load_balancer/internal/database/: models.go  servers.sql.go
load_balancer/sql/queries/: servers.sql
load_balancer/sql/schema/: 001_init.sql
orchestrator/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
orchestrator/migrations/: 20250203172643_servers.sql
orchestrator/src/: main.rs
orchestrator/src/docker/: add_server.rs  mod.rs  remove_server.rs
orchestrator/src/health/: add_new_server_db.rs  check_health.rs  drain_servers.rs  mod.rs  query_prom.rs  remove_server.rs  remove_server_from_db.rs
orchestrator/src/models/: active_urls.rs  mod.rs  server_model.rs
server_to_balance/: Dockerfile  docker-compose.yml  package.json  pnpm-lock.yaml  prometheus.yml
server_to_balance/src/: index.ts  middleware.ts
test_rust/: Cargo.toml
test_rust/src/: main.rs
test_rust/src/docker/: add_server.rs  remove_server.rs
