[package]
name = "dbpoller"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-async-std-native-tls"] }
tokio = { version = "1.43.0", features = ["full"] }
dotenvy = "0.15.7"
redis = { version = "0.28.2" }
serde_json = "1.0.138"
